...
          'refresh_token': refreshToken,
        };

      case DirectusLoginResultType.invalidCredentials:
        throw DirectusException(
          code: 'INVALID_CREDENTIALS',
          message: 'Invalid email or password',
        );

      case DirectusLoginResultType.invalidOTP:
        throw DirectusException(
          code: 'INVALID_OTP',
          message: 'OTP required or invalid',
...
